# rustly-dispatch

./: Cargo.toml
config/: example.toml
crates/control/: Cargo.toml
crates/control/src/: main.rs
crates/task-core/: Cargo.toml
crates/task-core/src/: lib.rs
crates/worker/: Cargo.toml
crates/worker/src/: main.rs
python/adapter/: README.md  pyproject.toml
python/adapter/taskforge/: __init__.py  client.py  task.py
schema/: task.schema.json
